recebendo informações do formulário no corpo da requisição

--- a/node_express/templates/index.html
+++ b/node_express/templates/index.html
@@ -12,5 +12,7 @@
     <a href="/usuarios/7">Ver usuário 7</a>
 
     <a href="/usuarios/4">Ver usuário 4</a>
+
+    <a href="/cadastro">Cadastrar-se</a>
 </body>
 </html>
